--- a/minimal_subscriber/package.xml
+++ b/minimal_subscriber/package.xml
@@ -9,6 +9,9 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>gazebo_msgs</build_depend>
+  <exec_depend>gazebo_msgs</exec_depend>
+
 
   <!-- These test dependencies are optional
   Their purpose is to make sure that the code passes the linters -->
