--- a/bridge_statem/package.xml
+++ b/bridge_statem/package.xml
@@ -24,6 +24,6 @@
 
   <export>
     <build_type>ament_python</build_type>
-    <ros1_bridge mapping_rules="my_mapping_rules.yaml"/>
+    <baxter_core_msgs mapping_rules="my_mapping_rules.yaml"/>
   </export>
 </package>
